Name:                cef3-example
Version:             0.1.0
Synopsis:            CEF3 bindings usage example
License:             BSD3
License-File:        LICENSE
Author:              Maksymilian Owsianny
Maintainer:          Maksymilian.Owsianny@gmail.com
Bug-Reports:         https://github.com/haskell-ui/cef3-example/issues
Category:            FFI
Build-Type:          Simple
Cabal-Version:       >=1.10

Source-Repository head
  type:     git
  location: https://github.com/haskell-ui/cef3-example.git

Executable cef3-example
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -Wall -threaded

  build-depends:     base                  >= 4.7
               ,     cef3-simple           == 0.1.*
               ,     protolude
               ,     threepenny-gui
               ,     optparse-applicative

  if os(windows)
    ghc-options:     -optl-mwindows
